build.log
[0/2] Re-checking globbed directories...
[1/2] Building CXX object scratch/CMakeFiles/scratch_uav_resource_allocation.dir/uav_resource_allocation.cc.o
FAILED: scratch/CMakeFiles/scratch_uav_resource_allocation.dir/uav_resource_allocation.cc.o 
/usr/bin/ccache /home/tzx/scorep_local/install/bin/scorep-g++ -DHAVE_BOOST -DHAVE_BOOST_UNITS -DHAVE_LIBXML2 -DHAVE_PACKET_H -DHAVE_SQLITE3 -DNS3_ASSERT_ENABLE -DNS3_BUILD_PROFILE_DEBUG -DNS3_LOG_ENABLE -DPROJECT_SOURCE_PATH=\"/home/tzx/ns-3.43\" -DRAW_SOCK_CREATOR=\"/home/tzx/ns-3.43/build/src/fd-net-device/ns3.43-raw-sock-creator-debug\" -DTAP_CREATOR=\"/home/tzx/ns-3.43/build/src/tap-bridge/ns3.43-tap-creator-debug\" -DTAP_DEV_CREATOR=\"/home/tzx/ns-3.43/build/src/fd-net-device/ns3.43-tap-device-creator-debug\" -D__LINUX__ -I/home/tzx/ns-3.43/build/include -I/usr -I/usr/include/freetype2 -I/usr/include/glib-2.0 -I/usr/lib/x86_64-linux-gnu/glib-2.0/include -I/usr/include/gdk-pixbuf-2.0 -I/usr/include/gtk-3.0 -I/usr/include/cairo -I/usr/include/pango-1.0 -I/usr/include/harfbuzz -I/usr/include/atk-1.0 -I/usr/include/libxml2 -g -std=c++20 -fPIE   -fno-semantic-interposition -Wall -Wpedantic -Werror -Wno-error=deprecated-declarations -MD -MT scratch/CMakeFiles/scratch_uav_resource_allocation.dir/uav_resource_allocation.cc.o -MF scratch/CMakeFiles/scratch_uav_resource_allocation.dir/uav_resource_allocation.cc.o.d -o scratch/CMakeFiles/scratch_uav_resource_allocation.dir/uav_resource_allocation.cc.o -c /home/tzx/ns-3.43/scratch/uav_resource_allocation.cc
/home/tzx/ns-3.43/scratch/uav_resource_allocation.cc: In function ‘void MonitorQoSPerformance()’:
/home/tzx/ns-3.43/scratch/uav_resource_allocation.cc:344:39: error: variable ‘t’ set but not used [-Werror=unused-but-set-variable]
  344 |         Ipv4FlowClassifier::FiveTuple t = classifier->FindFlow(flowId);
      |                                       ^
cc1plus: all warnings being treated as errors
[Score-P] ERROR: Execution failed: g++ `/home/tzx/scorep_local/install/bin/scorep-config --thread=none --mpp=none --io=posix --nocuda --noopencl --noopenacc --memory --nokokkos --nohip --cxxflags`   -g -std=c++20 -fPIE -fno-semantic-interposition -Wall -Wpedantic -Wno-error=deprecated-declarations -Werror '-DHAVE_BOOST' '-DHAVE_BOOST_UNITS' '-DHAVE_LIBXML2' '-DHAVE_PACKET_H' '-DHAVE_SQLITE3' '-DNS3_ASSERT_ENABLE' '-DNS3_BUILD_PROFILE_DEBUG' '-DNS3_LOG_ENABLE' '-DPROJECT_SOURCE_PATH="/home/tzx/ns-3.43"' '-DRAW_SOCK_CREATOR="/home/tzx/ns-3.43/build/src/fd-net-device/ns3.43-raw-sock-creator-debug"' '-DTAP_CREATOR="/home/tzx/ns-3.43/build/src/tap-bridge/ns3.43-tap-creator-debug"' '-DTAP_DEV_CREATOR="/home/tzx/ns-3.43/build/src/fd-net-device/ns3.43-tap-device-creator-debug"' '-D__LINUX__' -I/home/tzx/ns-3.43/build/include -I/usr -I/usr/include/freetype2 -I/usr/include/glib-2.0 -I/usr/lib/x86_64-linux-gnu/glib-2.0/include -I/usr/include/gdk-pixbuf-2.0 -I/usr/include/gtk-3.0 -I/usr/include/cairo -I/usr/include/pango-1.0 -I/usr/include/harfbuzz -I/usr/include/atk-1.0 -I/usr/include/libxml2 -c -MD -MT scratch/CMakeFiles/scratch_uav_resource_allocation.dir/uav_resource_allocation.cc.o -MF scratch/CMakeFiles/scratch_uav_resource_allocation.dir/uav_resource_allocation.cc.o.d  -c /home/tzx/ns-3.43/scratch/uav_resource_allocation.cc -o scratch/CMakeFiles/scratch_uav_resource_allocation.dir/uav_resource_allocation.cc.o
ninja: build stopped: subcommand failed.
Finished executing the following commands:
/usr/bin/cmake --build /home/tzx/ns-3.43/build -j 19 --target scratch_uav_resource_allocation
